<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:layout_gravity="center_vertical"
    tools:context=".form_basic_data">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="20"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:srcCompat="@drawable/team_matching_logo" />

            <TextView
                android:id="@+id/basic_txt_group_id"
                style="@style/textview_small_pink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/basic_group_id" />

            <EditText
                android:id="@+id/basic_input_group_id"
                style="@style/textedit_pink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/basic_input_group_id"
                android:inputType="text|number"
                android:text="" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/basic_txt_username"
                style="@style/textview_small_pink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/basic_username" />

            <EditText
                android:id="@+id/basic_input_username"
                style="@style/textedit_pink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/basic_input_username"
                android:inputType="textNoSuggestions"
                android:text="" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/basic_txt_name"
                style="@style/textview_small_pink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/basic_name" />

            <EditText
                android:id="@+id/basic_input_name"
                style="@style/textedit_pink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/basic_input_name"
                android:inputType="textPersonName"
                android:text="" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3" />

            <Button
                android:id="@+id/basicNextButton"
                style="@style/small_button_pink"
                android:layout_gravity="center"
                android:text="@string/nextButton" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>